--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
-    background: url(Last\ of\ us.jpg);
+    background: url(172333.jpg);
     background-size: cover;
     background-color: #464647;
 }
